# Length-prefixed-Protobuf

./: CMakeLists.txt  README.md
src/protobuf_parser/: DelimitedMessagesStreamParser.hpp  helpers.hpp  main.cpp
test/: TestFirst.cpp  Test_DelimitedMessagesStreamParser.cpp  Test_Helpers.cpp
